修正数据库查询失败的bug和添加匿名功能

--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@ textarea {
 #submitButton {
     position: relative;
     top: 16px;
-    left: 75px;
+    left: 10px;
 }
 
 #quitButton {
@@ -102,4 +102,11 @@ textarea {
     top: 150px;
     right: 300px;
     color: rgba(255, 230, 56, 0.73);
+}
+
+#hideBox {
+    font-size: 150%;
+    position: relative;
+    top: 60px;
+    left: 100px;
 }
